[metadata]
name = tweepy
version = attr: tweepy.__version__
description = Twitter library for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Joshua Roesslein
author_email = tweepy@googlegroups.com
license = MIT
license_file = LICENSE
url = https://www.tweepy.org/
project_urls =
    Documentation = https://tweepy.readthedocs.io
    Issue Tracker = https://github.com/tweepy/tweepy/issues
    Source Code = https://github.com/tweepy/tweepy
download_url = https://pypi.org/project/tweepy/
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    twitter
    library

[options]
packages = find:
test_suite = tests
install_requires =
    oauthlib>=3.2.0,<4
    requests>=2.27.0,<3
    requests-oauthlib>=1.2.0,<2
python_requires = >=3.7
zip_safe = True

[options.extras_require]
all =
    %(async)s
    %(dev)s
    %(socks)s
    %(test)s
async =
    aiohttp>=3.7.3,<4
    async-lru>=1.0.3,<2
dev =
    coverage>=4.4.2
    coveralls>=2.1.0
    tox>=3.21.0
    setuptools>=46.4.0
socks =
    requests[socks]>=2.27.0,<3
test =
    # mypy>=0.950
    vcrpy>=1.10.3
types =
    types-oauthlib>=3.1.6,<4
    types-requests>=2.27.11,<3
    typing-extensions>=4.0,<5

[options.package_data]
tweepy =
    requirements.txt
    # py.typed

[coverage:run]
source = tweepy

[coverage:report]
omit =
    */python?.?/*
    */site-packages/*

[tox:tox]
envlist = py37, py38, py39, py310

[testenv]
commands = python -m unittest discover tests
extras = async, test
